Finish Forward Prop & Init Weights

--- a/project_skeleton.ipynb
+++ b/project_skeleton.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "id": "Mv24yWSyKAiU"
    },
@@ -241,16 +241,124 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.7751, 0.1159, 0.0386, 0.0703]])\n"
+      "tensor([[[[0.0357, 0.0357, 0.0357,  ..., 0.0357, 0.0357, 0.0357],\n",
+      "          [0.0357, 0.0357, 0.0357,  ..., 0.0357, 0.0357, 0.0357],\n",
+      "          [0.0357, 0.0357, 0.0357,  ..., 0.0357, 0.0357, 0.0357],\n",
+      "          ...,\n",
+      "          [0.0357, 0.0357, 0.0357,  ..., 0.0357, 0.0357, 0.0357],\n",
+      "          [0.0357, 0.0357, 0.0357,  ..., 0.0357, 0.0357, 0.0357],\n",
+      "          [0.0357, 0.0357, 0.0357,  ..., 0.0357, 0.0357, 0.0357]]],\n",
+      "\n",
+      "\n",
+      "        [[[0.0338, 0.0315, 0.0284,  ..., 0.0224, 0.0240, 0.0289],\n",
+      "          [0.0338, 0.0315, 0.0284,  ..., 0.0224, 0.0240, 0.0289],\n",
+      "          [0.0338, 0.0315, 0.0284,  ..., 0.0224, 0.0240, 0.0289],\n",
+      "          ...,\n",
+      "          [0.0338, 0.0315, 0.0284,  ..., 0.0224, 0.0240, 0.0289],\n",
+      "          [0.0338, 0.0315, 0.0284,  ..., 0.0224, 0.0240, 0.0289],\n",
+      "          [0.0338, 0.0315, 0.0284,  ..., 0.0224, 0.0240, 0.0289]]],\n",
+      "\n",
+      "\n",
+      "        [[[0.0349, 0.0314, 0.0271,  ..., 0.0302, 0.0307, 0.0341],\n",
+      "          [0.0349, 0.0314, 0.0271,  ..., 0.0302, 0.0307, 0.0367],\n",
+      "          [0.0349, 0.0314, 0.0271,  ..., 0.0302, 0.0307, 0.0341],\n",
+      "          ...,\n",
+      "          [0.0349, 0.0314, 0.0271,  ..., 0.0302, 0.0307, 0.0341],\n",
+      "          [0.0349, 0.0314, 0.0271,  ..., 0.0302, 0.0307, 0.0341],\n",
+      "          [0.0349, 0.0314, 0.0271,  ..., 0.0302, 0.0307, 0.0341]]],\n",
+      "\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "\n",
+      "        [[[0.0322, 0.0304, 0.0308,  ..., 0.0285, 0.0290, 0.0318],\n",
+      "          [0.0322, 0.0304, 0.0308,  ..., 0.0285, 0.0290, 0.0318],\n",
+      "          [0.0322, 0.0304, 0.0308,  ..., 0.0285, 0.0290, 0.0318],\n",
+      "          ...,\n",
+      "          [0.0322, 0.0304, 0.0308,  ..., 0.0285, 0.0290, 0.0318],\n",
+      "          [0.0322, 0.0304, 0.0308,  ..., 0.0285, 0.0290, 0.0318],\n",
+      "          [0.0322, 0.0304, 0.0308,  ..., 0.0285, 0.0290, 0.0318]]],\n",
+      "\n",
+      "\n",
+      "        [[[0.0357, 0.0357, 0.0357,  ..., 0.0357, 0.0357, 0.0357],\n",
+      "          [0.0357, 0.0357, 0.0357,  ..., 0.0357, 0.0357, 0.0357],\n",
+      "          [0.0357, 0.0357, 0.0357,  ..., 0.0357, 0.0357, 0.0357],\n",
+      "          ...,\n",
+      "          [0.0357, 0.0357, 0.0357,  ..., 0.0357, 0.0357, 0.0357],\n",
+      "          [0.0357, 0.0357, 0.0357,  ..., 0.0357, 0.0357, 0.0357],\n",
+      "          [0.0357, 0.0357, 0.0357,  ..., 0.0357, 0.0357, 0.0357]]],\n",
+      "\n",
+      "\n",
+      "        [[[0.0348, 0.0320, 0.0301,  ..., 0.0287, 0.0314, 0.0338],\n",
+      "          [0.0348, 0.0320, 0.0301,  ..., 0.0287, 0.0314, 0.0338],\n",
+      "          [0.0348, 0.0320, 0.0301,  ..., 0.0287, 0.0314, 0.0338],\n",
+      "          ...,\n",
+      "          [0.0348, 0.0320, 0.0301,  ..., 0.0287, 0.0314, 0.0338],\n",
+      "          [0.0348, 0.0320, 0.0301,  ..., 0.0287, 0.0314, 0.0338],\n",
+      "          [0.0348, 0.0320, 0.0301,  ..., 0.0287, 0.0314, 0.0338]]]])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([[0.2547, 2.1547, 3.2547, 2.6547]])"
+       "tensor([[[[3.3322, 3.3322, 3.3322,  ..., 3.3322, 3.3322, 3.3322],\n",
+       "          [3.3322, 3.3322, 3.3322,  ..., 3.3322, 3.3322, 3.3322],\n",
+       "          [3.3322, 3.3322, 3.3322,  ..., 3.3322, 3.3322, 3.3322],\n",
+       "          ...,\n",
+       "          [3.3322, 3.3322, 3.3322,  ..., 3.3322, 3.3322, 3.3322],\n",
+       "          [3.3322, 3.3322, 3.3322,  ..., 3.3322, 3.3322, 3.3322],\n",
+       "          [3.3322, 3.3322, 3.3322,  ..., 3.3322, 3.3322, 3.3322]]],\n",
+       "\n",
+       "\n",
+       "        [[[3.3876, 3.4575, 3.5597,  ..., 3.8000, 3.7293, 3.5445],\n",
+       "          [3.3876, 3.4575, 3.5597,  ..., 3.8000, 3.7293, 3.5445],\n",
+       "          [3.3876, 3.4575, 3.5597,  ..., 3.8000, 3.7293, 3.5445],\n",
+       "          ...,\n",
+       "          [3.3876, 3.4575, 3.5597,  ..., 3.8000, 3.7293, 3.5445],\n",
+       "          [3.3876, 3.4575, 3.5597,  ..., 3.8000, 3.7293, 3.5445],\n",
+       "          [3.3876, 3.4575, 3.5597,  ..., 3.8000, 3.7293, 3.5445]]],\n",
+       "\n",
+       "\n",
+       "        [[[3.3552, 3.4617, 3.6084,  ..., 3.5012, 3.4842, 3.3793],\n",
+       "          [3.3552, 3.4617, 3.6084,  ..., 3.5012, 3.4842, 3.3048],\n",
+       "          [3.3552, 3.4617, 3.6084,  ..., 3.5012, 3.4842, 3.3793],\n",
+       "          ...,\n",
+       "          [3.3552, 3.4617, 3.6084,  ..., 3.5012, 3.4842, 3.3793],\n",
+       "          [3.3552, 3.4617, 3.6084,  ..., 3.5012, 3.4842, 3.3793],\n",
+       "          [3.3552, 3.4617, 3.6084,  ..., 3.5012, 3.4842, 3.3793]]],\n",
+       "\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "\n",
+       "        [[[3.4353, 3.4937, 3.4800,  ..., 3.5568, 3.5400, 3.4477],\n",
+       "          [3.4353, 3.4937, 3.4800,  ..., 3.5568, 3.5400, 3.4477],\n",
+       "          [3.4353, 3.4937, 3.4800,  ..., 3.5568, 3.5400, 3.4477],\n",
+       "          ...,\n",
+       "          [3.4353, 3.4937, 3.4800,  ..., 3.5568, 3.5400, 3.4477],\n",
+       "          [3.4353, 3.4937, 3.4800,  ..., 3.5568, 3.5400, 3.4477],\n",
+       "          [3.4353, 3.4937, 3.4800,  ..., 3.5568, 3.5400, 3.4477]]],\n",
+       "\n",
+       "\n",
+       "        [[[3.3322, 3.3322, 3.3322,  ..., 3.3322, 3.3322, 3.3322],\n",
+       "          [3.3322, 3.3322, 3.3322,  ..., 3.3322, 3.3322, 3.3322],\n",
+       "          [3.3322, 3.3322, 3.3322,  ..., 3.3322, 3.3322, 3.3322],\n",
+       "          ...,\n",
+       "          [3.3322, 3.3322, 3.3322,  ..., 3.3322, 3.3322, 3.3322],\n",
+       "          [3.3322, 3.3322, 3.3322,  ..., 3.3322, 3.3322, 3.3322],\n",
+       "          [3.3322, 3.3322, 3.3322,  ..., 3.3322, 3.3322, 3.3322]]],\n",
+       "\n",
+       "\n",
+       "        [[[3.3578, 3.4415, 3.5042,  ..., 3.5510, 3.4606, 3.3875],\n",
+       "          [3.3578, 3.4415, 3.5042,  ..., 3.5510, 3.4606, 3.3875],\n",
+       "          [3.3578, 3.4415, 3.5042,  ..., 3.5510, 3.4606, 3.3875],\n",
+       "          ...,\n",
+       "          [3.3578, 3.4415, 3.5042,  ..., 3.5510, 3.4606, 3.3875],\n",
+       "          [3.3578, 3.4415, 3.5042,  ..., 3.5510, 3.4606, 3.3875],\n",
+       "          [3.3578, 3.4415, 3.5042,  ..., 3.5510, 3.4606, 3.3875]]]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,9 +377,10 @@
     "    iteration = 0\n",
     "    \n",
     "    for value in x: # x is a 2D tensor containing each image\n",
-    "        tensor_exp = torch.exp(value)\n",
-    "        tensor_probabilities[iteration] = tensor_exp / torch.sum(tensor_exp, dim=dim)\n",
-    "        iteration += 1\n",
+    "        for z in value: # do we really need 2 loops? im still not sure\n",
+    "            tensor_exp = torch.exp(z)\n",
+    "            tensor_probabilities[iteration] = tensor_exp / torch.sum(tensor_exp, dim=dim)\n",
+    "            iteration += 1\n",
     "    \n",
     "    print(tensor_probabilities)\n",
     "    return tensor_probabilities\n",
@@ -293,7 +402,7 @@
     "tens = torch.tensor([[3.2,1.3,0.2,0.8]])\n",
     "label = torch.tensor([0,1,0,0])\n",
     "\n",
-    "CE_loss(tens, kmnist_labels)"
+    "CE_loss(kmnist_images, kmnist_labels)"
    ]
   },
   {
@@ -315,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "u_BV_J1NKAiW"
    },
@@ -327,7 +436,7 @@
     "    def __init__(self,layers_dim,layers_activation=None,device='cpu'):\n",
     "        \"\"\" Initialize network\n",
     "        Args:\n",
-    "            layers_dims (List of ints): list of Size of each layer of the network\n",
+    "            layers_dim (List of ints): list of Size of each layer of the network\n",
     "                                        [inputs,layer1,...,outputs]\n",
     "            layers_activation (List of strings): list of activation function for each hidden layer\n",
     "                                        of the network[layer1,...,outputs]\n",
@@ -357,7 +466,22 @@
     "        ### TODO: Store weights and biases in self.params\n",
     "        ### HINT: Remember to set require_grad to True\n",
     "        ### HINT: Remember to put tensors of target device\n",
-    "        pass\n",
+    "        \n",
+    "        # Init weights & bias\n",
+    "        for dim in range(1, len(self.layers_dim), 1):\n",
+    "            current_layer = self.layers_dim[dim]\n",
+    "            previous_layer = self.layers_dim[dim - 1]\n",
+    "            \n",
+    "            # Weights from prev -> current layer\n",
+    "            layered_nodes = torch.rand(previous_layer, current_layer, device=self.device, requires_grad=True)\n",
+    "            \n",
+    "            # Bias for layer\n",
+    "            bias = torch.rand(previous_layer, current_layer, device=self.device, requires_grad=True)\n",
+    "            \n",
+    "            self.params['W' + str(dim)] = layered_nodes\n",
+    "            self.params['b' + str(dim)] = bias\n",
+    "\n",
+    "            \n",
     "\n",
     "    def forward(self,x):\n",
     "        \"\"\" Perform forward pass\n",
@@ -368,7 +492,25 @@
     "            torch.tensor: tensor of shape of (B, N_classes)\n",
     "        \"\"\"\n",
     "        ### TODO: Fill out this function\n",
-    "        pass"
+    "        for_pass = []\n",
+    "        for b_index in range(len(x)):\n",
+    "            image = x[b_index][0]\n",
+    "            for function in self.layers_activation:\n",
+    "                if function == \"sigmoid\":\n",
+    "                    for_pass.append(Sigmoid(torch.sum\n",
+    "                                   (torch.matmul\n",
+    "                                    (image, self.params['W' + str(b_index)]), self.params['b' + str(b_index)])))\n",
+    "                else if function == \"relu\"\n",
+    "                    for_pass.append(ReLU(torch.sum\n",
+    "                                   (torch.matmul\n",
+    "                                    (image, self.params['W' + str(b_index)]), self.params['b' + str(b_index)])))\n",
+    "                else if function == \"identity\"\n",
+    "                    for_pass.append(Identity(torch.sum\n",
+    "                                   (torch.matmul\n",
+    "                                    (image, self.params['W' + str(b_index)]), self.params['b' + str(b_index)])))\n",
+    "        \n",
+    "        \n",
+    "        return for_pass"
    ]
   },
   {
