Fix my_nn bugs & Start Training Function
This is what happens when you're tired...you make silly mistakes.

--- a/project_skeleton.ipynb
+++ b/project_skeleton.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "id": "a4G0UJ4EcIfX",
     "pycharm": {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "id": "5ADRTRFNcIfY"
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "id": "y9UQampoKAiS"
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "id": "7NR2HHDGKAiS",
     "scrolled": true
@@ -122,10 +122,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1329d41df08>"
+       "<matplotlib.image.AxesImage at 0x13299f320c8>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "id": "NiIHSa5fKAiU"
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "id": "Mv24yWSyKAiU"
    },
@@ -358,7 +358,7 @@
        "          [3.3578, 3.4415, 3.5042,  ..., 3.5510, 3.4606, 3.3875]]]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {
     "id": "u_BV_J1NKAiW"
    },
@@ -493,24 +493,28 @@
     "        \"\"\"\n",
     "        ### TODO: Fill out this function\n",
     "        for_pass = []\n",
+    "        for_pass_nn = torch.zeros(batch_size, device=self.device, requires_grad=True)\n",
     "        for b_index in range(len(x)):\n",
     "            image = x[b_index][0]\n",
-    "            for function in self.layers_activation:\n",
-    "                if function == \"sigmoid\":\n",
-    "                    for_pass.append(Sigmoid(torch.sum\n",
-    "                                   (torch.matmul\n",
-    "                                    (image, self.params['W' + str(b_index)]), self.params['b' + str(b_index)])))\n",
-    "                else if function == \"relu\"\n",
-    "                    for_pass.append(ReLU(torch.sum\n",
-    "                                   (torch.matmul\n",
-    "                                    (image, self.params['W' + str(b_index)]), self.params['b' + str(b_index)])))\n",
-    "                else if function == \"identity\"\n",
-    "                    for_pass.append(Identity(torch.sum\n",
-    "                                   (torch.matmul\n",
-    "                                    (image, self.params['W' + str(b_index)]), self.params['b' + str(b_index)])))\n",
+    "            for_pass = 0\n",
+    "            \n",
+    "            if function[b_index] == \"sigmoid\":\n",
+    "                for_pass = Sigmoid(torch.sum\n",
+    "                                (torch.matmul\n",
+    "                                (image, self.params['W' + str(b_index)]), self.params['b' + str(b_index)]))\n",
+    "            elif function[b_index] == \"relu\":\n",
+    "                for_pass = ReLU(torch.sum\n",
+    "                                (torch.matmul\n",
+    "                                (image, self.params['W' + str(b_index)]), self.params['b' + str(b_index)]))\n",
+    "            elif function[b_index] == \"identity\":\n",
+    "                for_pass = Identity(torch.sum\n",
+    "                                (torch.matmul\n",
+    "                                (image, self.params['W' + str(b_index)]), self.params['b' + str(b_index)]))\n",
+    "                \n",
+    "            for_pass_nn[b_index] = for_pass\n",
     "        \n",
     "        \n",
-    "        return for_pass"
+    "        return for_pass_nn"
    ]
   },
   {
@@ -525,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "id": "0XCEZfcKKAia"
    },
@@ -545,16 +549,19 @@
     "    loss_tracker = []\n",
     "    accuracy_tracker = []\n",
     "    for i,(data,label) in enumerate(dataloader):\n",
+    "        # https://pytorch.org/tutorials/beginner/blitz/neural_networks_tutorial.html#sphx-glr-beginner-blitz-neural-networks-tutorial-py\n",
     "        ### TODO: Put data and label on target device\n",
     "\n",
-    "        ### TODO: Set gradients to zero\n",
-    "\n",
+    "        ### TODO: Set gradients to zero to clear previous gradients\n",
+    "        optimizer.zero_grad()\n",
     "        ### TODO: Pass data to the model\n",
-    "\n",
+    "        neural_network = model.forward(data)\n",
     "        ### TODO: Calculate the loss of predicted labels vs ground truth labels\n",
-    "\n",
+    "        loss = CE_Loss(predictions, label)\n",
     "        ### TODO: Calculate gradients and update weights and biases\n",
-    "\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "            \n",
     "        if i % 20:\n",
     "            with torch.no_grad():\n",
     "                loss_tracker.append(loss.item())\n",
